feat: return user detail from add user API
